--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "googleads/google-ads-php",
-  "homepage": "https://github.com/googleads/google-ads-php",
-  "description": "Google Ads API client for PHP",
+  "name": "ciaran-moore/google-ads-php-84",
+  "homepage": "https://github.com/ciaran-moore/google-ads-php-84",
+  "description": "Google Ads API client for PHP 8.4",
   "require": {
     "php": ">=8.1",
     "google/gax": "^1.19.1",
